# dming

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  count_chars.py  d20_probabilities.py  decrypt_by_mirror.py  decrypt_by_offset.py  feet_to_meters.py  kender_leveling.py  pyproject.toml
.github/workflows/: main.yml  release.yml
dming/: __init__.py  cli.py  dice.py  roll.py
scripts/: __init__.py  bump.py
tests/: test_dice.py
